--- a/ai-assistant/package.json
+++ b/ai-assistant/package.json
@@ -18,13 +18,6 @@
       "icon": "🌐"
     },
     {
-      "name": "test",
-      "title": "Test Clipboard",
-      "description": "Test clipboard and selected text functionality",
-      "mode": "view",
-      "icon": "🧪"
-    },
-    {
       "name": "dictate",
       "title": "Dictate Text",
       "description": "Convert speech to text with optional translation",
@@ -39,18 +32,25 @@
       "icon": "🤖"
     },
     {
-      "name": "dictate-settings",
-      "title": "Configure Dictation",
-      "description": "Set default language for dictation",
+      "name": "settings",
+      "title": "Settings",
+      "description": "Configure AI Assistant preferences and features",
       "mode": "view",
       "icon": "⚙️"
     },
     {
       "name": "summarize-page",
-      "title": "Summarize Current Page",
-      "description": "Get a quick AI summary of the current browser page",
+      "title": "Summarize A Text or the Current Page",
+      "description": "Get a quick AI summary",
       "mode": "view",
       "icon": "📝"
+    },
+    {
+      "name": "dictate-models",
+      "title": "Manage Whisper Models",
+      "description": "Install Whisper and manage local speech recognition models",
+      "mode": "view",
+      "icon": "🔧"
     }
   ],
   "preferences": [
