--- a/ai-assistant/package.json
+++ b/ai-assistant/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "ai-assistant",
-  "title": "AI Assistant",
+  "title": "🤖 AI Assistant",
   "description": "Your personal AI assistant for Mac!\n\nFeaturing smart translation, voice dictation with offline support, AI-powered text improvement, and web page summarization.\nSeamlessly integrates with your workflow for instant translations, voice-to-text, content generation, and quick summaries - all without leaving your current app.",
   "icon": "extension-icon.png",
   "author": "pezzos",
