feat: add local speech recognition models support
- Introduced a new guide for local speech recognition models, detailing installation and usage for Whisper and Parakeet engines.
- Updated package.json to reflect changes in model management terminology.
- Refactored dictate-models component to support local models, including installation and cleanup functionalities.
- Enhanced dictate and settings components to accommodate local engine selection and model management.
- Removed deprecated whisper-local utility and replaced it with a unified local-models utility for better maintainability.
- Added comprehensive error handling and logging for model installation and transcription processes.

--- a/extensions/ai-assistant/package.json
+++ b/extensions/ai-assistant/package.json
@@ -65,8 +65,8 @@
     },
     {
       "name": "dictate-models",
-      "title": "Manage Whisper Models",
-      "description": "Install and manage local Whisper speech recognition models for offline use.\nChoose between different model sizes (Tiny, Base, Small, Medium) to balance speed and accuracy based on your needs.",
+      "title": "Manage Local Models",
+      "description": "Install and manage local speech recognition models for offline use.\nSupports Whisper (universal) and Parakeet (Apple Silicon) engines with various model sizes to balance speed and accuracy.",
       "mode": "view",
       "icon": "command-icon-models.png"
     },
