feat: implement performance profiling system for AI Assistant
- Added a new performance-stats view to display detailed metrics for AI Assistant operations.
- Introduced performance profiling capabilities in dictate and translate commands to measure execution times and resource usage.
- Created a centralized PerformanceProfiler utility for session management and data logging.
- Enhanced timing functions to integrate with the performance profiler for better insights.
- Documented the performance profiling system in PERFORMANCE-PROFILING.md for user guidance.

--- a/extensions/ai-assistant/package.json
+++ b/extensions/ai-assistant/package.json
@@ -90,6 +90,13 @@
       "description": "Access and manage your past dictation sessions with full metadata including timestamps, source language, and any translations or improvements applied.\nEasily copy or reuse previous transcriptions.",
       "mode": "view",
       "icon": "command-icon-dictate.png"
+    },
+    {
+      "name": "performance-stats",
+      "title": "Performance Statistics",
+      "description": "View detailed performance metrics for all AI Assistant operations including transcription times, LLM response times, and local vs cloud processing comparisons.\nHelps identify bottlenecks and optimize your workflow.",
+      "mode": "view",
+      "icon": "command-icon-settings.png"
     }
   ],
   "preferences": [
