--- a/extensions/ai-assistant/package.json
+++ b/extensions/ai-assistant/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "ai-assistant",
   "title": "🤖 AI Assistant",
-  "description": "Your personal AI assistant for Mac!\n\nFeaturing smart translation, voice dictation with offline support, AI-powered text improvement, and web page summarization.\nSeamlessly integrates with your workflow for instant translations, voice-to-text, content generation, and quick summaries - all without leaving your current app.",
+  "description": "Your personal AI assistant for Mac!\n\nFeaturing voice dictation with offline support, AI-powered text improvement, and web page summarization.\nSeamlessly integrates with your workflow for voice-to-text, content generation, and quick summaries - all without leaving your current app.",
   "icon": "extension-icon.png",
   "author": "pezzos",
   "version": "1.0.0",
@@ -28,13 +28,6 @@
   ],
   "homepage": "https://github.com/pezzos/raycast-ai-assistant",
   "commands": [
-    {
-      "name": "translate",
-      "title": "Translate Selected Text",
-      "description": "Smart translation between your primary languages with automatic language detection.\nPreserves formatting, punctuation, and technical terms while optionally improving grammar.\nExample: Write an email in English, select the text and instantly translate it to French while maintaining its tone.",
-      "mode": "no-view",
-      "icon": "command-icon-translate.png"
-    },
     {
       "name": "dictate",
       "title": "Dictate Text",
