--- a/extensions/ai-assistant/package.json
+++ b/extensions/ai-assistant/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "ai-assistant",
   "title": "🤖 AI Assistant",
-  "description": "Your personal AI assistant for Mac!\n\nFeaturing voice dictation with offline support, AI-powered text improvement, and web page summarization.\nSeamlessly integrates with your workflow for voice-to-text, content generation, and quick summaries - all without leaving your current app.",
+  "description": "Your personal voice-powered AI assistant for Mac!\n\nFeaturing intelligent voice dictation with offline support, AI-powered text improvement, and content generation.\nSeamlessly integrates with your workflow for voice-to-text, AI prompts, and text enhancement - all without leaving your current app.",
   "icon": "extension-icon.png",
   "author": "pezzos",
   "version": "1.0.0",
@@ -17,10 +17,9 @@
   },
   "keywords": [
     "ai",
-    "translation",
     "dictation",
     "speech-to-text",
-    "summarization",
+    "voice",
     "openai",
     "whisper",
     "productivity",
@@ -48,13 +47,6 @@
       "description": "Configure AI Assistant preferences including language settings, AI models, speech recognition mode, audio settings, and feature toggles.\nManage your personal dictionary and local Whisper models for offline use.",
       "mode": "view",
       "icon": "command-icon-settings.png"
-    },
-    {
-      "name": "summarize-page",
-      "title": "Summarize a Text or the Current Page",
-      "description": "Get an AI-powered summary of any selected text or full web page with key points highlighted.\nIncludes optional 'Explore More' suggestions and supports multiple languages.\n\nExample: Quickly understand a long article by getting a concise summary with main takeaways.",
-      "mode": "view",
-      "icon": "command-icon-summarize.png"
     },
     {
       "name": "dictate-models",
@@ -107,7 +99,6 @@
     "@eslint/object-schema": "^2.1.6",
     "@raycast/api": "^1.91.1",
     "@raycast/utils": "^1.17.0",
-    "cheerio": "^1.0.0",
     "date-fns": "^3.3.1",
     "glob": "^11.0.1",
     "lru-cache": "^11.0.2",
