feat: add dependency management for AI Assistant
- Introduced a new command to automatically install and manage system dependencies required for AI Assistant, including sox, ffmpeg, ffprobe, and uv.
- Implemented a UI for checking and displaying the status of dependencies, allowing users to refresh and install missing dependencies directly from the settings.
- Added utility functions for checking and installing dependencies, ensuring a smoother setup process for users.
- Updated package.json to include the new command and its description for better user guidance.

--- a/extensions/ai-assistant/package.json
+++ b/extensions/ai-assistant/package.json
@@ -82,6 +82,13 @@
       "description": "View detailed performance metrics for all AI Assistant operations including transcription times, LLM response times, and local vs cloud processing comparisons.\nHelps identify bottlenecks and optimize your workflow.",
       "mode": "view",
       "icon": "command-icon-settings.png"
+    },
+    {
+      "name": "install-dependencies",
+      "title": "Install Dependencies",
+      "description": "Automatically install and manage system dependencies required for AI Assistant.\nIncludes sox, ffmpeg, ffprobe, and uv for audio processing and local model support.",
+      "mode": "view",
+      "icon": "command-icon-settings.png"
     }
   ],
   "preferences": [
